# py-firelib

./: .gitignore  Makefile  Pipfile  README  pyproject.toml  setup.py
src/: fireLib.i
